--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -303,6 +303,7 @@ ChatLounge.ChooseBotName=Choose Bot Name
 ChatLounge.Command=Command: 
 ChatLounge.CustomMapSize=Custom size, use Map size button
 ChatLounge.deploysAfterRound=Deploy before round 
+ChatLounge.deploysAfterZone=\ in Zone\ 
 ChatLounge.deploysOffBoard=Deploys off board
 ChatLounge.ExclusiveDeploy.title=Starting Position not allowed
 ChatLounge.ExclusiveDeploy.msg=In Double Blind play, you cannot choose 'Any' as starting position.
@@ -720,6 +721,7 @@ CustomMechDialog.labCommander=Command Unit
 CustomMechDialog.labCommandInit=Commander Initiative: 
 CustomMechDialog.labDamageDivisor=Damage Divisor: 
 CustomMechDialog.labDeployment=Deployment Round:
+CustomMechDialog.labDeploymentZone=Deployment Zone:
 CustomMechDialog.labDeployShutdown=Deploy Shutdown 
 CustomMechDialog.labDeployProne=Deploy Prone 
 CustomMechDialog.labDeployHullDown=Deploy Hull Down 
@@ -787,6 +789,19 @@ CustomMechDialog.Active=Active Mine
 CustomMechDialog.Inferno=Inferno Mine
 CustomMechDialog.Command-detonated=Command-detonated Mine
 CustomMechDialog.switchToHotLoading=Hot-Load Ammo
+CustomMechDialog.useOwners=Use Owners*
+CustomMechDialog.deployAny=Any
+CustomMechDialog.deployNW=NW
+CustomMechDialog.deployN=N
+CustomMechDialog.deployNE=NE
+CustomMechDialog.deployE=E
+CustomMechDialog.deploySE=SE
+CustomMechDialog.deployS=S
+CustomMechDialog.deploySW=SW
+CustomMechDialog.deployW=W
+CustomMechDialog.deployEdge=Edge
+CustomMechDialog.deployCenter=Center
+CustomMechDialog.deployZoneToolTip=<html>Set the zone this unit will deploy into.<br>*Note: After the deployment phase, the owners zone becomes Any.</html>
 
 DeploymentDisplay.alertDialog.title=Invalid deployment
 DeploymentDisplay.alertDialog1.message={0} can not load any of the remaining units.
