Cherry-picking ac18d0
When master was merged in after these changes, it dropped all of the changes from my last 3 commits.  This is bizzare and I have no idea how it happened.

Conflicts:
	megamek/docs/history.txt

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -20,6 +20,8 @@ v0.41.10 (git)
 + Bug [#4448]: Added Tech Level option in Allowed Units and Equipment tab
 + Bug [#4448]: Removed several redudant options from Alowed Units and Equipment
 + Bug [#4057]: track turret weight for omnitanks correctly
++ Construction data for Remote Drone Command Console
++ verifier for RISC super-cooled myomer
 
 
 v0.41.9 (2014-09-14 01:25 UTC)
