+ Construction data for Remote Drone Command Console + verifier for RISC super-cooled myomer

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -16,6 +16,8 @@ v0.41.10 (git)
 + Bug [#4234]: Added Mine Clearance missile munitions
 + Bug [#4219]: Issues with stacking violations and MovePaths
 + Bug [#4507]: Units can now set deployment zone if deploying after round 1
++ Construction data for Remote Drone Command Console
++ verifier for RISC super-cooled myomer
 
 
 v0.41.9 (2014-09-14 01:25 UTC)
