--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -16,6 +16,9 @@ v0.41.10 (git)
 + Bug [#4234]: Added Mine Clearance missile munitions
 + Bug [#4219]: Issues with stacking violations and MovePaths
 + Bug [#4507]: Units can now set deployment zone if deploying after round 1
++ Bug [#4448]: Moved Game Year option to Allowed Units and Equipment tab
++ Bug [#4448]: Added Tech Level option in Allowed Units and Equipment tab
++ Bug [#4448]: Removed several redudant options from Alowed Units and Equipment
 
 
 v0.41.9 (2014-09-14 01:25 UTC)
