+ ready to develop <0.41.11>

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -1,5 +1,7 @@
 VERSION HISTORY:
 ----------------
+v0.41.11-git
+
 v0.41.10 (2015-10-12 00:11 UTC)
 + Data: New Sprites and unit file.
 + only replace pilot external ID in MULParser if not null or zero length
