--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -5,6 +5,7 @@ v0.41.11-git
 + Bug [#4635]: Diagramming LOS struggles with terrain elevation
 + Bug: BA APDS counting for both offensive and defensive BV when BA can make
     anti-mech attacks
++ Bug: APDS ammo counting for both offensive and defensive BV for tanks
 
 v0.41.10 (2015-10-12 00:11 UTC)
 + Data: New Sprites and unit file.
