+ Added RISC Emergency Coolant System

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -6,6 +6,7 @@ v0.41.11-git
 + Bug: BA APDS counting for both offensive and defensive BV when BA can make
     anti-mech attacks
 + Bug: APDS ammo counting for both offensive and defensive BV for tanks
++ Added RISC Emergency Coolant System
 
 v0.41.10 (2015-10-12 00:11 UTC)
 + Data: New Sprites and unit file.
