--- a/megamek/i18n/megamek/common/report-messages.properties
+++ b/megamek/i18n/megamek/common/report-messages.properties
@@ -513,7 +513,8 @@
 5019=Adding <data> heat from Charged Capacitor...
 5020=Adding <data> heat due to extreme temperatures...
 5025=Subtracting <data> heat due to extreme temperatures...
-5026=Subtracting <data> heat due to combat computer..
+5026=Subtracting <data> heat due to combat computer...
+5027=Subtracting <data> heat due to RISC Emergency Coolant System...
 5030=Adding <data> heat from a fire...
 5032=Adding <data> heat from magma...
 5035=<data> (<data>) gains <data> heat, sinks <data> heat and is now at <data> heat.
