+ Bug [#4636]: Type filter in Unit selection missing 'All', unless 'unofficial' is selected in game options

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -8,6 +8,8 @@ v0.41.11-git
 + Bug: APDS ammo counting for both offensive and defensive BV for tanks
 + Added RISC Emergency Coolant System
 + Bug [#4637]: Princess NPE in Precognition
++ Bug [#4636]: Type filter in Unit selection missing 'All', unless 'unofficial'
+    is selected in game options
 
 v0.41.10 (2015-10-12 00:11 UTC)
 + Data: New Sprites and unit file.
