+ Bug: AdvancedSearchDialog, possible to select weapon & eq table simultaneously

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -12,6 +12,7 @@ v0.41.11-git
     is selected in game options
 + Bug: Accidental fall from above check fails when target is standing in water
 + Bug: AdvancedSearchDialog query doesn't clear when UnitSelectorDialog closed
++ Bug: AdvancedSearchDialog, possible to select weapon & eq table simultaneously
 
 v0.41.10 (2015-10-12 00:11 UTC)
 + Data: New Sprites and unit file.
