--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -13,6 +13,7 @@ v0.41.11-git
 + Bug: Accidental fall from above check fails when target is standing in water
 + Bug: AdvancedSearchDialog query doesn't clear when UnitSelectorDialog closed
 + Bug: AdvancedSearchDialog, possible to select weapon & eq table simultaneously
++ Feature: AdvancedSearchDialog now uses simple tech level displayable names
 
 v0.41.10 (2015-10-12 00:11 UTC)
 + Data: New Sprites and unit file.
