--- a/megamek/i18n/megamek/common/messages.properties
+++ b/megamek/i18n/megamek/common/messages.properties
@@ -97,6 +97,8 @@ UnitType.Naval=Naval
 UnitType.Gun\ Emplacement=Gun Emplacement
 UnitType.Small\ Craft=Small Craft
 UnitType.Space\ Station=Space Station
+TechLevel.T_ALLOWED_ALL=Allowed All
+TechLevel.T_TECH_UNKNOWN=Unknown
 TechLevel.IS_Box_Set=IS Introductory Box Set
 TechLevel.IS_TW_Non_Box=IS TW non-box set
 TechLevel.Clan_TW=Clan TW
