+ Bug: listSaves command was looking for .sav and not updated .sav.gz
  Now will print files that end in .sav or .sav.gz.  Also will print out a
message indicating no saves exist if none are found.

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -15,6 +15,7 @@ v0.41.11-git
 + Bug: AdvancedSearchDialog, possible to select weapon & eq table simultaneously
 + Feature: AdvancedSearchDialog now uses simple tech level displayable names
 + Bug [#4638]: Aero advanced ammunition always unavailable
++ Bug: listSaves command was looking for .sav and not updated .sav.gz
 
 v0.41.10 (2015-10-12 00:11 UTC)
 + Data: New Sprites and unit file.
