+ Bug: /load command requires players to disconnect/reconnect after game loads
Server ensures that the connection ID matches the player ID.  If the /load
command is used, then a list of players may already be connected (with assigned
connection IDs).  When the game is loaded, it loads a new list of players, and
so the match between player ID and connection ID is not guaranteed to hold.

I added to code that will correct this.

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -18,6 +18,7 @@ v0.41.11-git
 + Bug: listSaves command was looking for .sav and not updated .sav.gz
 + Added function to possibly ignore key presses, used from MekWars
 + Data: New Sprites.
++ Bug: /load command requires players to disconnect/reconnect after game loads
 
 v0.41.10 (2015-10-12 00:11 UTC)
 + Data: New Sprites and unit file.
