+ Bug: Issues with updating double-blind visuals information
Sometimes, when a unit moved, the visual indicators for all units wouldn't
be updated properly.  This ultimately came down to Server.updateVisibilityIndicator.
This method updates every unit with what players have units that can see the unit.
The problem was the logic that determined if clients needed to be updated.
This logic was working on boolean flags, which would fail when you got to games
with more than 2 players.  I decided that sending the visibility indicators is
small overhead and so it should always be sent, unless an entityUpdate is required.
An entityUpdate is fired if there is some client that now sees/detects the entity
that wasn't able to see/detect it before.

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -20,6 +20,7 @@ v0.41.11-git
 + Data: New Sprites.
 + Bug: /load command requires players to disconnect/reconnect after game loads
 + Bug [#4638]: Advanced Aero Rules Broken in 41.10 (specfically with Evade)
++ Bug: Issues with updating double-blind visuals information
 
 v0.41.10 (2015-10-12 00:11 UTC)
 + Data: New Sprites and unit file.
