+ Feature: Implemented RISC APDS

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -377,6 +377,9 @@ CFRDomino.NoAction=No Action
 CFRAMSAssign.Title=Assign AMS for {0}
 CFRAMSAssign.Message=Pick which attack the AMS on {0} will target.\n
 
+CFRAPDSAssign.Title=Assign APDS for {0}
+CFRAPDSAssign.Message=Pick which attack the APDS on {0} will target.\n
+
 ClientGUI.BoardPopup=Board Popup...
 ClientGUI.clientTitleSuffix=\ - MegaMek
 ClientGUI.Disconnected.message=You have become disconnected from the server.
