--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -21,6 +21,7 @@ v0.41.11-git
 + Bug: /load command requires players to disconnect/reconnect after game loads
 + Bug [#4638]: Advanced Aero Rules Broken in 41.10 (specfically with Evade)
 + Bug: Issues with updating double-blind visuals information
++ Feature: Implemented RISC APDS
 
 v0.41.10 (2015-10-12 00:11 UTC)
 + Data: New Sprites and unit file.
