--- a/megamek/i18n/megamek/common/report-messages.properties
+++ b/megamek/i18n/megamek/common/report-messages.properties
@@ -286,6 +286,7 @@
 3220=<font color='808080'><B>misses</B></font>
 3225=\ and consumes <data> shots.
 3230=AMS engages.
+3231=APDS engages.
 3235=would hit, but...
 3240=The <data> is destroyed by AMS fire (rolled <data>).
 3241=The <data> survived the AMS fire (rolled <data>).
@@ -317,7 +318,8 @@
 3341=\ (w/ <data> malus)
 3342=\ (ELRM minimum range)
 3345=.
-3350=AMS engaged! 
+3350=AMS engaged!
+3351=APDS engaged (<data> modifier)!
 3360=<data> missile(s) get through.
 3365=\ Attack deals zero damage.
 3370=<font color='008000'><B>hits</B></font> with <data> inferno missile(s).
