--- a/megamek/i18n/megamek/common/equipmentmessages.properties
+++ b/megamek/i18n/megamek/common/equipmentmessages.properties
@@ -598,3 +598,6 @@ SystemType.Cockpit.COCKPIT_PRIMITIVE_INDUSTRIAL=Primitive\ Industrial\ Cockpit
 SystemType.Cockpit.COCKPIT_SUPERHEAVY=Superheavy\ Cockpit
 SystemType.Cockpit.COCKPIT_SUPERHEAVY_TRIPOD=Superheavy\ Tripod\ Cockpit
 SystemType.Cockpit.COCKPIT_INTERFACE=Interface\ Cockpit
+SystemType.Cockpit.COCKPIT_VRRP=Virtual\ Reality\ Piloting\ Pod
+SystemType.Cockpit.COCKPIT_QUADVEE=Quadvee\ Cockpit
+SystemType.Cockpit.COCKPIT_SUPERHEAVY_INDUSTRIAL=Superheavy\ Industrial\ Cockpit
