--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -23,6 +23,7 @@ v0.41.11-git
 + Bug: Issues with updating double-blind visuals information
 + Feature: Implemented RISC APDS
 + New Sprites/Couple of unit fixes.
++ Feature [#1407]: Default tripod icon
 
 v0.41.10 (2015-10-12 00:11 UTC)
 + Data: New Sprites and unit file.
