+ Errata: BA Tube Artillery should allow up to 8 shots per crit, in 2-shot clips

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -25,6 +25,7 @@ v0.41.11-git
 + New Sprites/Couple of unit fixes.
 + Feature [#1407]: Default tripod icon
 + Default game year set to 3150
++ Errata: BA Tube Artillery should allow up to 8 shots per crit, in 2-shot clips
 
 v0.41.10 (2015-10-12 00:11 UTC)
 + Data: New Sprites and unit file.
