--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -995,6 +995,8 @@ KeyBinds.cmdNames.autoArtyDeployZone=Deployment Zones
 KeyBinds.cmdDesc.autoArtyDeployZone=Show all players' deployment zones during auto artillery target designation
 KeyBinds.cmdNames.fieldOfFire=Field of Fire
 KeyBinds.cmdDesc.fieldOfFire=Show the field of fire of a selected weapon on the board
+KeyBinds.cmdNames.cancel=Cancel
+KeyBinds.cmdDesc.cancel=Cancels current action
 
 LOSDialog.inFirstHex=In first hex:
 LOSDialog.InSecondHex=In second hex:
