+ Added tooltip to Type list in UntiSelectorDialog
Makes it clearer that multiple selections are allowed and gives hints at
quick ways to make large selections (aka, ctrl-a works for selecting all).

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -1142,6 +1142,7 @@ MechSelectorDialog.m_labelFilter=Filter:
 MechSelectorDialog.m_labelPlayer=Player:
 MechSelectorDialog.m_labelSort=Sort: 
 MechSelectorDialog.m_labelType=Type: 
+MechSelectorDialog.m_labelType.ToolTip=<html>Determines which techlevels are allowed.  <br>Multiple selections are allowed using shift-click, ctrl-click, and ctrl-a</html>
 MechSelectorDialog.m_labelUnitType=Unit Type: 
 MechSelectorDialog.m_labelWeightClass=Weight Class: 
 MechSelectorDialog.MixedAll=Mixed All
