--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -31,6 +31,7 @@ v0.41.11-git
 + Bug: FiringSprites from previous Firing phase still drawn in Targeting phase
 + Bug: Added missing i18n entries for Cancel key
 + Added tooltip to Type list in UntiSelectorDialog
++ Added KeyBind for "Done" action
 
 v0.41.10 (2015-10-12 00:11 UTC)
 + Data: New Sprites and unit file.
