--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -5,6 +5,7 @@ v0.41.12-git
 + Bug: Icarus II unit icon not showing up
 + Bug [#4648]: "add a combat unit" stops working after you close the window
 + Data: New Sprites, OTP Capellan Crusades, unit fixes.
++ Bug [#4650]: ASFs not getting free turn between game turns
 
 v0.41.11 (2015-11-15 16:50 UTC)
 + Data: New Sprites.
