--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -11,6 +11,7 @@ v0.41.12-git
 + Bug: Basement collapsed i18n entry for tooltip incorrect
 + Bug [#4645]: Map switches from [GENERATED] to [SURPRISE] with Map Size button
 + Bug [#4656]: isInSameBuilding Error
++ Feature: Adding facing arrow for landed dropships
 
 v0.41.11 (2015-11-15 16:50 UTC)
 + Data: New Sprites.
