+ Data: New Sprites and some unit fixes.

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -18,6 +18,7 @@ v0.41.12-git
 + Bug [#4555]: Aeros strike/dive bomb now lose altitude before attacks resolve
 + Updated comment headers in .tileset files for hexes
 + Bug: Oddities mounting BA with magclamps in lounge
++ Data: New Sprites and some unit fixes.
 
 v0.41.11 (2015-11-15 16:50 UTC)
 + Data: New Sprites.
