--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -19,6 +19,7 @@ v0.41.12-git
 + Updated comment headers in .tileset files for hexes
 + Bug: Oddities mounting BA with magclamps in lounge
 + Data: New Sprites and some unit fixes.
++ Feature: Entity tooltips now display current sensor if sensors rules used
 
 v0.41.11 (2015-11-15 16:50 UTC)
 + Data: New Sprites.
