--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -218,6 +218,7 @@ BoardView1.Tooltip.Immobile=<I><FONT COLOR=RED>Immobile</FONT><I>
 BoardView1.Tooltip.ArtilleryAttack1=Artillery: {0} in 1 turn<BR><FONT SIZE=-2>&nbsp;&nbsp;Ammo: {1}</FONT>
 BoardView1.Tooltip.ArtilleryAttackN=Artillery: {0} in {2} turns<BR><FONT SIZE=-2>&nbsp;&nbsp;Ammo: {1}</FONT>
 BoardView1.Tooltip.SeenBy=Seen by: {0}
+BoardView1.Tooltip.Sensors=Sensor: {0}
 
 BoardView1.Tooltip.Hex=Hex: {0} - Level: {1}
 BoardView1.Tooltip.Building={1} <BR>Height: {0}, CF: {2}<BR>Armor: {3}; Basement: {4}
