--- a/megamek/i18n/megamek/common/report-messages.properties
+++ b/megamek/i18n/megamek/common/report-messages.properties
@@ -318,7 +318,7 @@
 3341=\ (w/ <data> malus)
 3342=\ (ELRM minimum range)
 3345=.
-3350=AMS engaged!
+3350=AMS engaged!\ 
 3351=APDS engaged (<data> modifier)!
 3360=<data> missile(s) get through.
 3365=\ Attack deals zero damage.
