--- a/megamek/i18n/megamek/common/options/messages.properties
+++ b/megamek/i18n/megamek/common/options/messages.properties
@@ -299,7 +299,7 @@ GameOptionsInfo.option.increased_iserll_range.description=If checked, the IS ER 
 GameOptionsInfo.option.unjam_uac.displayableName=(Unofficial) Unjam Ultra Autocannons
 GameOptionsInfo.option.unjam_uac.description=When checked,\nyou will be able to unjam Ultra Autocannons just like Rotary models.
 GameOptionsInfo.option.uac_tworolls.displayableName=(Unofficial) Ultra Autocannons To-Hit roll twice in Ultra Mode.
-GameOptionsInfo.option.uac_tworolls.description=If checked,\nUltra Autocannons will roll twice for To-Hit instead of rolling on the 2 column of the missile hits table.
+GameOptionsInfo.option.uac_tworolls.description=If checked,\nUltra Autocannons will roll twice for To-Hit instead of rolling on the 2 column of the missile hits table.\nNote: Autocannons firing with the TacOps rapid fire autocannons rules will not benefit from this option
 GameOptionsInfo.option.clubs_punch.displayableName=(Unofficial) Club (Hatchet, Sword, etc...) attacks use punch table.
 GameOptionsInfo.option.clubs_punch.description=When checked, all club type attacks will be rolled like punches.
 GameOptionsInfo.option.on_map_predesignate.displayableName=(Unofficial) Allow artillery units on-map to pre-designate autohit hexes.
