+ Bug [#4661]: Equipment modes cannot be set while unit is deploying

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -21,6 +21,7 @@ v0.41.12-git
 + Data: New Sprites and some unit fixes.
 + Feature: Entity tooltips now display current sensor if sensors rules used
 + Bug [#4660]: AMS message in round report missing a space
++ Bug [#4661]: Equipment modes cannot be set while unit is deploying
 
 v0.41.11 (2015-11-15 16:50 UTC)
 + Data: New Sprites.
