--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -22,6 +22,7 @@ v0.41.12-git
 + Feature: Entity tooltips now display current sensor if sensors rules used
 + Bug [#4660]: AMS message in round report missing a space
 + Bug [#4661]: Equipment modes cannot be set while unit is deploying
++ Bug [#4658]: FoV darken/highlight considers visual range when DB is not on
 
 v0.41.11 (2015-11-15 16:50 UTC)
 + Data: New Sprites.
