+ Bug [#4662]: Strafing Error When Targeting Building with Infantry

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -26,6 +26,7 @@ v0.41.12-git
 + Bug [#4657]: Entity tooltips now displayed on mousing over sprite or hex
 + Bug: System Panel 'All Systems' loc display wrong DA/DC for shields
 + Bug [#4663]: Shields DC not considering missing/destroyed hand actuators
++ Bug [#4662]: Strafing Error When Targeting Building with Infantry
 
 v0.41.11 (2015-11-15 16:50 UTC)
 + Data: New Sprites.
