--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -27,6 +27,7 @@ v0.41.12-git
 + Bug: System Panel 'All Systems' loc display wrong DA/DC for shields
 + Bug [#4663]: Shields DC not considering missing/destroyed hand actuators
 + Bug [#4662]: Strafing Error When Targeting Building with Infantry
++ Bug: Answering 'No' to Vertical Takeoff PSR Nag doesn't clear move path
 
 v0.41.11 (2015-11-15 16:50 UTC)
 + Data: New Sprites.
