--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -31,6 +31,7 @@ v0.41.12-git
 + Bug: Missing 'in crater' penalty for vertical take-off (TW pg 88)
 + Bug [#4665]: Landed dropships unable to takeoff/unload if on prohibited terrain
 + Data: New Sprites, Unit Fixes, adding XTRO Republic III units
++ Bug [#4667]: Problem with assigning bombs to ASFs in the lobby
 
 v0.41.11 (2015-11-15 16:50 UTC)
 + Data: New Sprites.
