--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -32,6 +32,7 @@ v0.41.12-git
 + Bug [#4665]: Landed dropships unable to takeoff/unload if on prohibited terrain
 + Data: New Sprites, Unit Fixes, adding XTRO Republic III units
 + Bug [#4667]: Problem with assigning bombs to ASFs in the lobby
++ Bug [#4668]: UnitDisplay/Minimap positions save poorly with multi-monitors
 
 v0.41.11 (2015-11-15 16:50 UTC)
 + Data: New Sprites.
