--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -1,6 +1,6 @@
 VERSION HISTORY:
 ----------------
-v0.41.12-git
+v0.41.12 (2015-12-23 2:48 UTC)
 + Bug: Minimap still visible after using /reset command
 + Bug: Icarus II unit icon not showing up
 + Bug [#4648]: "add a combat unit" stops working after you close the window
