--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -35,6 +35,7 @@ v0.41.12 (2015-12-23 2:48 UTC)
 + Bug [#4668]: UnitDisplay/Minimap positions save poorly with multi-monitors
 + Data: New Sprites and unit name fixes. Update to Canon Quirks.
 + Bug [#4670]: Clan units with ammunition won't load
++ Bug [#4669]: Players connecting mid-game reset initiative
 
 v0.41.11 (2015-11-15 16:50 UTC)
 + Data: New Sprites.
