--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -1,5 +1,7 @@
 VERSION HISTORY:
 ----------------
+v0.41.13-git
+
 v0.41.12 (2015-12-23 2:48 UTC)
 + Bug: Minimap still visible after using /reset command
 + Bug: Icarus II unit icon not showing up
