+ Bug [#4666]: Santa Anna Missiles Incorrect Damage in Space Battles + Bug [#4609]: Teleguided missiles fire like normal missiles

--- a/megamek/i18n/megamek/common/report-messages.properties
+++ b/megamek/i18n/megamek/common/report-messages.properties
@@ -928,7 +928,7 @@
 9131=\ <font color='C00000'>no bombs to destroy.</font>
 9135=\ <font color='C00000'>Heat Sink destroyed!</font>
 9140=\ <font color='C00000'>Engine hit!</font>
-9145=<newline>NUCLEAR ATTACK! needs <data>, rolls <data> : 
+9145=<font color='C00000'>NUCLEAR ATTACK!</font> needs <data>, rolls <data>:
 9146=\ <font color='C00000'><data> damage directly to the SI. <data> SI remaining</font>
 9147=\ no additional effect.
 9150=\ <font color='C00000'>Critical hit on <data>.</font>
