+ Bug: Potential NPE in MapSettings.setMapSize

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -3,7 +3,7 @@ VERSION HISTORY:
 v0.41.13-git
 + Bug [#4666]: Santa Anna Missiles Incorrect Damage in Space Battles
 + Bug [#4609]: Teleguided missiles fire like normal missiles
-
++ Bug: Potential NPE in MapSettings.setMapSize
 
 v0.41.12 (2015-12-23 2:48 UTC)
 + Bug: Minimap still visible after using /reset command
