+ Bug: Fixes to dates with Engines/Cockpits/equipment.

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -4,6 +4,7 @@ v0.41.13-git
 + Bug [#4666]: Santa Anna Missiles Incorrect Damage in Space Battles
 + Bug [#4609]: Teleguided missiles fire like normal missiles
 + Bug: Potential NPE in MapSettings.setMapSize
++ Bug: Fixes to dates with Engines/Cockpits/equipment.
 
 v0.41.12 (2015-12-23 2:48 UTC)
 + Bug: Minimap still visible after using /reset command
