--- a/megamek/i18n/megamek/common/options/messages.properties
+++ b/megamek/i18n/megamek/common/options/messages.properties
@@ -308,6 +308,9 @@ GameOptionsInfo.option.map_area_predesignate.displayableName=(Unofficial) Specif
 GameOptionsInfo.option.map_area_predesignate.description=The default is 4 mapsheets * 16 hexes * 17 hexes = 1088 hexes
 GameOptionsInfo.option.num_hexes_predesignate.displayableName=(Unofficial) Specify the number of predesignated artillery autohit hexes per map area.
 GameOptionsInfo.option.num_hexes_predesignate.description=Offboard artillery get a specified number of predesignated artillery autohit hexes per map area (default is 5), see Total Warfare pg 180
+GameOptionsInfo.option.forest_fires_no_smoke.displayableName=(Unofficial) Burning Woods/Jungle don't generate smoke
+GameOptionsInfo.option.forest_fires_no_smoke.description=If selected, burning woods/jungle hexes won't generate the 3 hexes of light smoke
+
 
 GameOptionsInfo.group.advancedGroundMovement.displayableName=Advanced Ground Movement
 GameOptionsInfo.option.tacops_sprint.displayableName=TacOps Sprinting
