+ UnitSelectorDialog: Escape/Enter keys now work in a broader set of situations

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -9,6 +9,7 @@ v0.41.13-git
 + Data: New and RATs (ATOW,MW3rd, missing TRO 3085)(Thanks Magnus Kerensky)
 + Bug: Couple of Ammo Date Fixes.
 + Feature: Added unofficial option to not generate smoke from burning woods
++ UnitSelectorDialog: Escape/Enter keys now work in a broader set of situations
 
 v0.41.12 (2015-12-23 2:48 UTC)
 + Bug: Minimap still visible after using /reset command
