--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -3,6 +3,9 @@ VERSION HISTORY:
 v0.41.14-git
 + Data New Sprites/Various RAT and Unit Fixes.
 + Data New Sprites/Osts grow hands.
++ Bug:Protected Actuators quirk not working when Anti-Mek attacked.
++ Data New Sprites.
++ Bug:Quirks with Quirks (hitch on VTOLs, Actuator quirks on Vees)
 
 v0.41.13 (2016-01-01 03:35 UTC)
 + Bug [#4666]: Santa Anna Missiles Incorrect Damage in Space Battles
