+ Bug [#4680]: Vehicular Grenade Launcher Landed Wrong

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -7,6 +7,7 @@ v0.41.14-git
 + Data New Sprites.
 + Bug:Quirks with Quirks (hitch on VTOLs, Actuator quirks on Vees)
 + Errata: Re-Engineered Laser changes.
++ Bug [#4680]: Vehicular Grenade Launcher Landed Wrong
 
 v0.41.13 (2016-01-01 03:35 UTC)
 + Bug [#4666]: Santa Anna Missiles Incorrect Damage in Space Battles
