+ Bug [#4681]: Fatigue point usage can be confusing

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -736,6 +736,7 @@ CustomMechDialog.labDriving=Driving:
 CustomMechDialog.labDump=Dump this ammobin
 CustomMechDialog.labEncumber=Encumbering?
 CustomMechDialog.labFatigue=Fatigue Points: 
+CustomMechDialog.labFatigueToolTip=StratOps fatigue points, see SO pg 41
 CustomMechDialog.labGunnery=Gunnery: 
 CustomMechDialog.labGunneryB=Gunnery (B): 
 CustomMechDialog.labGunneryL=Gunnery (L): 
