+ Errata: Turret Tech Level Changes + Data: New Sprites

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -9,6 +9,8 @@ v0.41.14-git
 + Errata: Re-Engineered Laser changes.
 + Bug [#4680]: Vehicular Grenade Launcher Landed Wrong
 + Bug [#4681]: Fatigue point usage can be confusing
++ Errata: Turret Tech Level Changes
++ Data: New Sprites
 
 v0.41.13 (2016-01-01 03:35 UTC)
 + Bug [#4666]: Santa Anna Missiles Incorrect Damage in Space Battles
