+ Bug: It was possible to select mult/even init options with individual init on

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -12,6 +12,7 @@ v0.41.14-git
 + Errata: Turret Tech Level Changes
 + Data: New Sprites
 + Bug [#4679]: Entity deploymentZone won't save as -1 in MUL
++ Bug: It was possible to select mult/even init options with individual init on
 
 v0.41.13 (2016-01-01 03:35 UTC)
 + Bug [#4666]: Santa Anna Missiles Incorrect Damage in Space Battles
