+ Bug #4: Disallow simultaneous enabling of Lance Movement and Individual Init

--- a/megamek/i18n/megamek/common/options/messages.properties
+++ b/megamek/i18n/megamek/common/options/messages.properties
@@ -336,11 +336,11 @@ GameOptionsInfo.option.tacops_walk_backwards.description=If checked Meks and Tan
 GameOptionsInfo.option.tacops_fast_infantry_move.displayableName=TacOps Fast Infantry Movement
 GameOptionsInfo.option.tacops_fast_infantry_move.description=If checked,\ninfantry can sprint as per the rules in TacOps,\npg.\n27.
 GameOptionsInfo.option.mek_lance_movement.displayableName=(Unofficial) Mek Lance Movement
-GameOptionsInfo.option.mek_lance_movement.description=If checked,\nMeks must move as a complete lance at once,\nset the number of vehicles per lance below.\nDefault 4.
+GameOptionsInfo.option.mek_lance_movement.description=If checked,\nMeks must move as a complete lance at once,\nset the number of vehicles per lance below.\nDefault 4.\nIncompatible with individual initiative.
 GameOptionsInfo.option.mek_lance_movement_number.displayableName=Number of meks per lance
 GameOptionsInfo.option.mek_lance_movement_number.description=The number of meks that have to move for every turn.\nOnly used if Mek Lance Movement is checked.\nDefault of 4.
 GameOptionsInfo.option.vehicle_lance_movement.displayableName=TacOps Vehicle Lance Movement
-GameOptionsInfo.option.vehicle_lance_movement.description=If checked,\nVehicles must move as a complete lance at once,\nset the number of vehicles per lance below.\nDefault 4.
+GameOptionsInfo.option.vehicle_lance_movement.description=If checked,\nVehicles must move as a complete lance at once,\nset the number of vehicles per lance below.\nDefault 4.\nIncompatible with individual initiative.
 GameOptionsInfo.option.vehicle_lance_movement_number.displayableName=Number of vehicles per lance
 GameOptionsInfo.option.vehicle_lance_movement_number.description=The number of vehicles that have to move for every Mek.\nOnly used if TacOps Vehicle Lance Movement is checked.\nDefault of 4.
 GameOptionsInfo.option.tacops_hull_down.displayableName=TacOps Hull Down
@@ -468,7 +468,7 @@ GameOptionsInfo.option.edge.description=if checked, pilots can be assigned edge 
 GameOptionsInfo.option.manei_domini.displayableName=Manei Domini Options
 GameOptionsInfo.option.manei_domini.description=VDNI,\nBuffered VDNI,\nand Pain Shunt as pilot options
 GameOptionsInfo.option.individual_initiative.displayableName=(Unofficial) Individual Initiative
-GameOptionsInfo.option.individual_initiative.description=If checked,\neach unit has its own initiative roll,\nand must move in that fixed order.\n Good for zellbrigen or RPG style games.
+GameOptionsInfo.option.individual_initiative.description=If checked,\neach unit has its own initiative roll,\nand must move in that fixed order.\n Good for zellbrigen or RPG style games.\nIncompatible with the lance movement options.
 GameOptionsInfo.option.command_init.displayableName=(Unofficial) Commander Initiative
 GameOptionsInfo.option.command_init.description=Each unit will have a commander initiative bonus and the highest bonus among active units for each team will be added to initiative.
 GameOptionsInfo.option.rpg_gunnery.displayableName=(Legacy) RPG Gunnery Skills
