+ Bug: Sprinting with low gravity could cause MASC failure checks
It looks like Mech.getSprintMP() was incorrectly passing 'false' to
Mech.getSprintMP(3) for the gravity flag.  This meant that Mech.getSprintMP
and Mech.getSprintMPWithoutMASC would return different values even if no
MASC was present (as Mech.getSprintMPWithoutMASC used properly used gravity).

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -15,6 +15,7 @@ v0.41.14-git
 + Bug: It was possible to select mult/even init options with individual init on
 + Bug #4: Disallow simultaneous enabling of Lance Movement and Individual Init
 + Bug [#4577]: ECCM effective beyond its nominal range
++ Bug: Sprinting with low gravity could cause MASC failure checks
 
 v0.41.13 (2016-01-01 03:35 UTC)
 + Bug [#4666]: Santa Anna Missiles Incorrect Damage in Space Battles
