--- a/megamek/i18n/megamek/common/report-messages.properties
+++ b/megamek/i18n/megamek/common/report-messages.properties
@@ -678,7 +678,7 @@
 6080=<data> damage point(s) passes on to <data> (<data>).
 6081=Mast Mount hit and destroyed!
 6082=Needs 3+ to avoid reactive armor chain reaction, rolls <data>.
-6083=<newline>reactive armor explodes causing a chain reaction.
+6083=<font color='C00000'>Reactive armor explodes causing a chain reaction!</font>
 6084=The passenger, <data> (<data>), avoids damage.
 6085=<data> Armor remaining.
 6086=<data> Armor remaining (damaged).
