+ Issue #20: Cluster Master should be labeled Unofficial not atow

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -2,6 +2,7 @@ VERSION HISTORY:
 ----------------
 v0.41.15-git
 + Issue #19: doTryUnstuck Error
++ Issue #20: Cluster Master should be labeled Unofficial not atow
 
 v0.41.14 (2016-02-02 13:10 UTC)
 + Data New Sprites/Various RAT and Unit Fixes.
