--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -3,6 +3,7 @@ VERSION HISTORY:
 v0.41.15-git
 + Issue #19: doTryUnstuck Error
 + Issue #20: Cluster Master should be labeled Unofficial not atow
++ Issue #18: Small Patch: changes lounge tooltip to act similar to board view tt
 
 v0.41.14 (2016-02-02 13:10 UTC)
 + Data New Sprites/Various RAT and Unit Fixes.
