--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -4,6 +4,7 @@ v0.41.15-git
 + Issue #19: doTryUnstuck Error
 + Issue #20: Cluster Master should be labeled Unofficial not atow
 + Issue #18: Small Patch: changes lounge tooltip to act similar to board view tt
++ Issue #11: RFE: Open MiniMap during Artillery Designate Targets automatically
 
 v0.41.14 (2016-02-02 13:10 UTC)
 + Data New Sprites/Various RAT and Unit Fixes.
