--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -8,6 +8,7 @@ v0.41.15-git
 + Added BattleValue field to MechcacheCSVTool
 + Data: New Sprites and Unit Fixes.
 + Issue #22: Mech UMUs attacker movement modifier and heat generation
++ Bug [#4683]: EntityWeightClass.getWeightClass doesn't consider SupportVTOL
 
 v0.41.14 (2016-02-02 13:10 UTC)
 + Data New Sprites/Various RAT and Unit Fixes.
