--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -741,6 +741,7 @@ CustomMechDialog.labGunnery=Gunnery:
 CustomMechDialog.labGunneryB=Gunnery (B): 
 CustomMechDialog.labGunneryL=Gunnery (L): 
 CustomMechDialog.labGunneryM=Gunnery (M): 
+CustomMechDialog.labHidden=Hidden Unit:
 CustomMechDialog.labInfantryArmor=Infantry Armor 
 CustomMechDialog.labInit=Initiative Bonus: 
 CustomMechDialog.labMountain=Mountain Infantry Training?
