--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -308,10 +308,11 @@ ChatLounge.deploysAfterZone=\ in Zone\
 ChatLounge.deploysOffBoard=Deploys off board
 ChatLounge.ExclusiveDeploy.title=Starting Position not allowed
 ChatLounge.ExclusiveDeploy.msg=In Double Blind play, you cannot choose 'Any' as starting position.
-ChatLounge.EntityListEntry1={0} ({1}/{2} pilot {3}{4}) Class: {5}{6}{7}{8}{9}
-ChatLounge.EntityListEntry2={0} ({1}/{2} pilot {3}{4}) {5}{6} BV={7}{8}{9}{10} {11}
+ChatLounge.EntityListEntry1={0} ({1}/{2} pilot {3}{4}) Class: {5}{6}{7}{8}{9}{10}
+ChatLounge.EntityListEntry2={0} ({1}/{2} pilot {3}{4}) {5}{6} BV={7}{8}{9}{10}{11} {12}
 ChatLounge.GameYear=Game year:
 ChatLounge.GameYearLabelToolTip=<html>Current game year, used to determine tech levels.<br>This value can be changed in Game Options>Basic Options</html>
+ChatLounge.hidden=Hidden Unit
 ChatLounge.imDone=I'm Done
 ChatLounge.implants=\ implant(s)
 ChatLounge.ImproperCommand=Improper command
